--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ authors = ["wenhao "]
 version = "0.1.0"
 
 [deps]
+BinaryProvider = "b99e7846-7c00-51b0-8f62-c81ae34c0232"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CodecBzip2 = "523fee87-0ab8-5b00-afb7-3ecf72e48cfd"
+CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
@@ -13,7 +15,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 FreqTables = "da1fdf0e-e0ff-5433-a45f-9bb5ff651cb1"
 GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
-JuliaDB = "a93385a2-3734-596a-9a66-3cfbb77141e6"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MatrixMarket = "4d4711f2-db25-561a-b6b3-d35e7d4047d3"
@@ -27,5 +29,6 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tulip = "6dd1b50a-3aae-11e9-10b5-ef983d2400fa"
